--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 		<druid.version>1.0.15</druid.version>
 		<mysql.version>5.1.21</mysql.version>
 		<fastjson.version>1.2.28</fastjson.version>
+		<lombok.version>1.16.18</lombok.version>
 	</properties>
 
 	<dependencies>
@@ -46,6 +47,12 @@
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
 			<version>${fastjson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>${lombok.version}</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
