添加日志打印

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@ jdbc.url=jdbc:mysql://192.168.33.117:33307/contentaudit?useUnicode=true&characte
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.username=root
 jdbc.password=123456
+
+
+logging.level.root=INFO
+logging.path=/
+logging.file=content-audit.log
